# azure-kinect-rs

./: Cargo.toml
azure-body-tracking/: Cargo.toml  build.rs  wrapper.h
azure-body-tracking/src/: api.rs  bindings.rs  k4abt_functions.rs
azure-kinect/: Cargo.toml  build.rs  wrapper.h
azure-kinect-sample-viewer/src/: main.rs
azure-kinect/examples/: enumerate.rs  open_device.rs  simple_body_tracking.rs
azure-kinect/src/: api.rs  bindings.rs  calibration.rs  capture.rs  default.rs  device.rs  display.rs  frame.rs  k4abt_functions.rs  lib.rs  playback.rs  playback_track.rs  record.rs  tracker.rs  transformation.rs
nannou-skeleton/: Cargo.toml
nannou-skeleton/src/: kinect.rs  main.rs
nannou-viewer/: Cargo.toml
nannou-viewer/src/: azure.rs  kinect.rs  main.rs
nannou-viewer/src/shaders/: colour_fs.wgsl  depth_fs.wgsl  fs.wgsl
