[package]
name = "nannou-viewer"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = { git = "https://github.com/mitchmindtree/nannou", branch = "wgpu-0.10"}
# nannou = "0.17.1"
azure-kinect = { path = "../azure-kinect" }
byteorder = "1.4.3"
env_logger = "0.9.0"